Initial theme changing

--- a/src/icarus_v2/qdarktheme/styles.qss
+++ b/src/icarus_v2/qdarktheme/styles.qss
@@ -1354,6 +1354,8 @@ PlotWidget {
 
     /* decrease border */
     border: none;
+
+    background: {{ background|color }};
 }
 
 /* ParameterTree ----------------------------------------------------------
